2005-02-07 15:53 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridNodeProjectionDisplacement) replaced edge and
	face projections with evaluations to fix the om6 test case. For
	some reason two neighboring nodes where projected to the same xyz
	location (to 8 digits). This needs to be cleaned up and renamed.

2005-02-07 14:07 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLinearProgramUV) Put in constraint checks that
	will not allow the optimization to reduce gridNodeAR below
	gridOPTIM_COST_FLOOR.
	* src/gridcad.c (gridSmoothNode) changed if-then constant to turn
	on gridLinearProgramUV for face node smoothing.

2005-02-07 10:10 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLinearProgramUV) Put in a divide by zero
	check to avoid NaN. The lowest and next lowest gradients pointed
	in exactly opposite directions, which gave me a zero length
	congigate direction. This resulted in a divide by zero when it was
	normalized to unity length.

2005-02-07 10:10 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNode) to speed up volume smoothing, the
	required improvement for smoothing to continue has been raised and
	made porportional to current cost.

2005-02-07  9:48 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLinearProgramXYZ) renamed from gridSmoothNodeQP.
	Added some slight perceived numerical robustness improvements.
	* src/gridcad.c (gridLinearProgramUV) Added some slight perceived
	numerical robustness improvements, but still gives ocational NaN's
	and strange valgrind behavior.
	* src/gridcad.c (gridSmoothNode) added gridLinearProgramUV within
	a FALSE if-then block. changed the termination criteria of volume
	node smoothing.

2005-02-03 22:43 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLinearProgramUV) added. This is a copy and
	edit of gridSmoothNodeQP to smooth faces using quadratic
	programing.
	
2005-02-03 17:37 Mike Park  <mike.park@nasa.gov>
